src/ui/Header/Header.scss
.header {
  @media only screen and (min-width: 769px) {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    width: 100%;
    height: 70px;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0.5rem 1rem;
    background: #002a5b 0% 0% no-repeat padding-box;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);

    &__items {
      display: flex;
      align-items: center;
      justify-content: space-between;
      width: 100%;
      height: 100%;
      padding: 0 7%;

      &__menu {
        display: none;
      }

      &__logo {
        // flex: 1;
        display: flex;
        align-items: center;
        justify-content: center;
        width: 159px;
        height: 40px;
        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
        margin-right: 68px;
      }

      &__categories {
        display: none;
        // width: 117px;
        // height: 23px;
        // margin-right: 68px;
        // display: flex;
        // align-items: center;
        // justify-content: center;
        // cursor: pointer;

        // TODO - Adicionar novamente quando tiver categorias

        &__title {
          font-size: 18px;
          font-weight: bold;
          color: #ef7f00;
        }

        i {
          font-size: 26px;
          color: #ef7f00;
          align-self: baseline;
        }

        &__dropdown-menu {
          margin-left: 10px;
          position: relative;
          display: inline-block;

          &__menu.active {
            display: flex;
          }

          &__menu {
            width: 702px;
            height: 600px;
            display: none;
            position: absolute;
            z-index: 9999;
            margin-left: 31%;
            top: 69px;
            background: #002a5b 0% 0% no-repeat padding-box;
            box-shadow: 0px 3px 6px #00000029;
            padding-top: 30px;
            padding-bottom: 88px;
            flex-direction: row;
            color: #fff;
            cursor: auto;

            &__items__left {
              width: 277px;
              display: flex;
              flex-direction: column;
              background: #002a5b;

              &__item {
                width: 100%;
                height: 60px;
                padding: 10px 30px 30px 50px;
                font-size: 16px;
                font-weight: bold;
                text-align: left;
                text-decoration: none;
                display: block;
                cursor: pointer;

                &:hover {
                  background: #ef7f00 0% 0% no-repeat padding-box;
                }
              }
            }

            &__items__right {
              display: flex;
              flex-direction: column;
              background: #002a5b;

              &__item {
                width: 100%;
                height: 60px;
                padding: 10px 30px 30px 15px;
                font-size: 16px;
                font-weight: bold;
                text-align: left;
                text-decoration: none;
                display: block;
                cursor: pointer;

                &:hover {
                  background: #ef7f00 0% 0% no-repeat padding-box;
                }
              }
            }
          }
        }
      }

      &__search {
        flex: 3;
        // width: 812px;
        height: 45px;
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: center;

        .wrapper {
          border-radius: 7px !important;
        }

        &__form {
          width: auto;
          display: flex;

          input {
            padding-left: 55px !important;
            width: 812px;
            height: 45px;
            border: 1px solid #ffffff;
            border-radius: 5px;
            padding: 0.5rem 1rem;
            color: #002a5b;
          }

          input.search-query {
            background: #ffffff 0% 0% no-repeat padding-box;
            font-size: 18px;
            font-weight: bold;
            color: #002a5b;
          }

          input::placeholder {
            color: #002a5b;
          }

          i {
            font-size: 26px;
            color: #002a5b;
            align-self: baseline;
            position: absolute;
            margin-top: 10px;
            margin-left: 15px;
            text-align: center;
            z-index: 99;
            cursor: pointer;
          }
        }
      }

      &__all-courses {
        width: 232px;
        height: 23px;
        display: flex;
        align-items: center;
        justify-content: center;
        letter-spacing: 0.32px;
        color: #ffffff;
        font-size: 18px;
        font-weight: bold;
        cursor: pointer;
      }

      &__login__info {
        flex: 1;
        // width: 154px;
        height: 40px;
        display: flex;
        align-items: center;
        justify-content: center;
        margin-left: 10px;

        &__buttons {
          display: flex;
          flex-direction: column;
          align-items: flex-start;
          font-size: 16px;
          font-weight: bold;

          &__or__text {
            color: #ffffff;
          }

          &__button {
            margin-bottom: 2px;
            margin-left: 10px;
            color: #ef7f00;
            text-decoration: none;
          }
        }

        &__avatar {
          width: 40px;
          height: 40px;
          background: #fff 0% 0% no-repeat padding-box;
          border-radius: 50%;
          margin-right: 10px;
          cursor: pointer;

          img {
            width: 40px;
            height: 40px;
            border-radius: 50%;
            object-fit: cover;
          }

          i {
            font-size: 40px;
            color: #b9bbbe;
            align-self: baseline;
          }
        }

        &__username-dropdown-menu {
          margin-left: 10px;
          position: relative;
          display: inline-block;
          cursor: pointer;

          &__username {
            display: flex;
            align-items: center;
            justify-content: center;

            span {
              font-size: 16px;
              font-weight: bold;
              color: #ef7f00;
              text-align: left;
            }

            i {
              margin-left: 20px;
              font-size: 26px;
              color: #ef7f00;
            }
          }

          &__menu.active {
            display: block;
          }

          &__menu {
            width: 268px;
            height: 120px;
            display: none;
            position: absolute;
            z-index: 9999;
            margin-left: -50px;
            margin-top: 10px;
            background: #002a5b 0% 0% no-repeat padding-box;
            box-shadow: 0px 3px 6px rgb(0 0 0 / 16%);

            &__items {
              display: block;
              background: #002a5b;

              &__item {
                width: 268px;
                height: 60px;
                padding: 10px 50px;
                color: #fff;
                font-size: 16px;
                font-weight: bold;
                text-align: left;
                text-decoration: none;
                display: block;
                cursor: pointer;

                &:first-child {
                  padding-top: 30px;
                }

                &:hover {
                  background: #ef7f00 0% 0% no-repeat padding-box;
                }
              }
            }
          }
        }
      }
    }

    .header__input {
      margin: 10px 15px 20px 0;
      padding: 0 10px;
      border-radius: 5px;
      outline: none;
      height: 45px;
      border: 1px solid #dce6f4;
    }
  }

  @media (min-width: 320px) and (max-width: 767.98px) {
    position: relative;
    top: 0;
    left: 0;
    right: 0;
    width: 100%;
    height: 132px;
    display: flex;
    flex-direction: column;
    padding: 1.25rem 1rem 0.5rem;
    background: #002a5b 0% 0% no-repeat padding-box;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
    z-index: 1080;

    &__items {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      width: 100%;
      height: 100%;

      &__menu {
        margin-right: 3%;
      }

      &__logo {
        flex: 2;
        display: flex;
        align-items: center;
        justify-content: center;
        width: 119px;
        height: 30px;
        margin-right: 50px;

        img {
          width: 119px;
          height: 30px;
        }
      }

      &__categories {
        display: none;
      }

      &__search {
        width: 100%;
        height: 45px;
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: center;

        .wrapper {
          border-radius: 7px !important;
        }

        &__form {
          width: 100%;
          display: flex;

          input {
            padding-left: 55px !important;
            width: 100%;
            height: 45px;
            border: 1px solid #ffffff;
            border-radius: 5px;
            padding: 0.5rem 1rem;
            color: #002a5b;
            outline: none;
          }

          input.search-query {
            background: #ffffff 0% 0% no-repeat padding-box;
            font-size: 18px;
            font-weight: bold;
            color: #002a5b;
          }

          input::placeholder {
            color: #002a5b;
          }

          i {
            font-size: 26px;
            color: #002a5b;
            align-self: baseline;
            position: absolute;
            margin-top: 10px;
            margin-left: 15px;
            text-align: center;
            z-index: 99;
            cursor: pointer;
          }
        }
      }

      &__all-courses {
        display: none;
      }

      &__login__info {
        height: 40px;
        position: absolute;
        right: 5px;

        &__buttons {
          display: none;
        }

        &__avatar {
          width: 40px;
          height: 40px;
          background: #fff 0% 0% no-repeat padding-box;
          border-radius: 50%;
          margin-right: 10px;
          margin-top: -5px;

          img {
            width: 40px;
            height: 40px;
            border-radius: 50%;
            object-fit: cover;
          }

          i {
            font-size: 40px;
            color: #b9bbbe;
            align-self: baseline;
          }
        }

        &__username-dropdown-menu {
          display: none;
        }
      }
    }

    .header__input {
      margin: 10px 15px 20px 0;
      padding: 0 10px;
      border-radius: 5px;
      outline: none;
      height: 45px;
      border: 1px solid #dce6f4;
    }
  }
}

